--- a/index.html
+++ b/index.html
@@ -35,54 +35,54 @@
 
     <div class="row center shadow p-3 mb-5 bg-white rounded section">
         <div class="center" id="introduction">
-            <p>Embark on a culinary adventure to discover the allure of Michelin Star restaurants in the United States. <br/>
+            <h5>Embark on a culinary adventure to discover the allure of Michelin Star restaurants in the United States. <br/>
                 What distinguishes these dining havens, setting them apart in the world of gastronomy? <br/>
                 Join us on an inspired journey to explore the stars of the American culinary scene. <br/>
                 Dive into the essence of what makes these restaurants not just special, but exceptional. <br/>
-                <br/><b>Let's unravel the mystery and savor the experience together!<br/><br/></b></p>
+                <br/><b><span style="color: #cc0000;">Let's unravel the mystery and savor the experience together!</span><br/><br/></b></h5>
         </div>
     </div>
 
     <div class="row center shadow p-3 mb-5 bg-white rounded section">
         <div class="center" id="michelin-stars">
             <p><h3>First, let's learn about what the different types of Michelin awards are!</h3> <br/>
-            <br/>Let's hear from the <a href="https://guide.michelin.com/us/en/article/features/what-is-a-michelin-star">Michelin Guide itself</a>!<br/></p>
+            <p><br/>Let's hear from the <a href="https://guide.michelin.com/us/en/article/features/what-is-a-michelin-star">Michelin Guide itself</a>!<br/></p>
             <div class="container michelin-stars">
                 <div class="row align-items-center mb-3">
                     <div class="col-3">
-                        Bib Gourmand
+                        <p>Bib Gourmand</p>
                     </div>
                     <div class="col-9">
-                        Our award for great value, and highlights <span style="color: #cc0000;">simple yet skillful</span> cooking at an <span style="color: #cc0000;">affordable</span> price. <br/>
-                        (But we should also say that we are looking for a high standard of cooking just for a restaurant to be recommended in the MICHELIN Guide.)<br/>
+                        <p>Our award for great value, and highlights <span style="color: #cc0000;">simple yet skillful</span> cooking at an <span style="color: #cc0000;">affordable</span> price. <br/>
+                            (But we should also say that we are looking for a high standard of cooking just for a restaurant to be recommended in the MICHELIN Guide.)<br/></p>
                     </div>
                     <hr />
                     <div class="col-3">
-                        1 Michelin Stars
+                        <p>1 Michelin Stars</p>
                     </div>
                     <div class="col-9">
-                        Awarded to restaurants using <span style="color: #cc0000;">top quality ingredients</span>, where dishes with distinct flavours are prepared to a consistently high standard. <br/>
+                        <p>Awarded to restaurants using <span style="color: #cc0000;">top quality ingredients</span>, where dishes with distinct flavours are prepared to a consistently high standard. <br/></p>
                     </div>
                     <hr />
                     <div class="col-3">
-                        2 Michelin Stars
+                        <p>2 Michelin Stars</p>
                     </div>
                     <div class="col-9">
-                        Awarded when the <span style="color: #cc0000;">personality and talent of the chef</span> are evident in their expertly crafted dishes; their food is refined and inspired.<br/>
+                        <p>Awarded when the <span style="color: #cc0000;">personality and talent of the chef</span> are evident in their expertly crafted dishes; their food is refined and inspired.<br/></p>
                     </div>
                     <hr />
                     <div class="col-3">
-                        3 Michelin Stars
+                        <p>3 Michelin Stars</p>
                     </div>
                     <div class="col-9">
-                        Our highest award, given for the <span style="color: #cc0000;">superlative cooking</span> of chefs at the peak of their profession; their cooking is elevated to <span style="color: #cc0000;">an art form</span> and some of their dishes are destined to become classics.<br/>
+                        <p>Our highest award, given for the <span style="color: #cc0000;">superlative cooking</span> of chefs at the peak of their profession; their cooking is elevated to <span style="color: #cc0000;">an art form</span> and some of their dishes are destined to become classics.<br/></p>
                     </div>
                     <hr />
                     <div class="col-3">
-                        Green Star
+                        <p>Green Star</p>
                     </div>
                     <div class="col-9">
-                        Our <span style="color: #cc0000;">newest award</span>. It was introduced to the MICHELIN Guide France in 2020 and is now featured in every country covered by the MICHELIN Guide. It is awarded to restaurants that are role models when it comes to <span style="color: #cc0000;">sustainable gastronomy</span>.<br/>
+                        <p>Our <span style="color: #cc0000;">newest award</span>. It was introduced to the MICHELIN Guide France in 2020 and is now featured in every country covered by the MICHELIN Guide. It is awarded to restaurants that are role models when it comes to <span style="color: #cc0000;">sustainable gastronomy</span>.<br/></p>
                     </div>
                 </div>
             </div>
@@ -91,16 +91,16 @@
 
     <div class="row center shadow p-3 mb-5 bg-white rounded section">
         <div class="row d-flex justify-content-center" id="wordCloud">
-            <div><h5 class="center"><b>Variety of Cuisines of Michelin Restaurants</b></h5></div>
+            <div><h3 class="center" id="wordCloud-text"><b>Variety of Cuisines of Michelin Restaurants</b></h3></div>
         </div>
     </div>
 
     <div class="row center shadow p-3 mb-5 bg-white rounded section">
         <div class="row d-flex justify-content-center" id="mapDiv">
-            <div><h5 class="center"><b>An Overview of All Michelin Restaurants in the U.S.</b></h5></div>
-            <h4 class="map-text">There is only a few states feature Michelin-starred restaurants, with California boasting the highest count of 219. </h4>
-            <p class="map-text">Explore the map by clicking on the clusters to discover detailed information of specific restaurants.
-                Utilize the search bar and dropdown menus to refine your search and uncover specific restaurants."</p>
+            <div><h3 class="center"><b>An Overview of All Michelin Restaurants in the U.S.</b></h3></div>
+            <h4 class="map-text">There is only a few states feature Michelin-starred restaurants, with <span style="color: #cc0000;">California</span> boasting the highest count of <span style="color: #cc0000;">219</span>.</h4>
+            <p class="map-text">Explore the map by <span style="color: #cc0000;">clicking on the clusters</span> to discover detailed information of specific restaurants.<br>
+                Utilize the <span style="color: #cc0000;">search bar</span> and <span style="color: #cc0000;">dropdown menus</span> to refine your search and uncover specific restaurants.</p>
             <div class="row d-flex justify-content-center" id="search-container">
                 <input type="text" id="searchInput" placeholder="Enter a Michelin Restaurant name">
                 <button id="searchButton">Search</button>
@@ -145,8 +145,8 @@
                 </div>
                 <div class="col">
                     <h4 class='sankey-text' style="font-size:28px; margin-top:80px"> Let's inspect the distribution of Michelin restaurants in the US. </h4>
-                    <div class='sankey-text' id="sankey-instruction" style="text-align:left"> <span style="color: #cc0000;">Choose relationships</span> to visualize from the select box. </br>
-                        <span style="color: #c09acb;">Hover over a specific link</span> to see the restaurant distribution in detail.</br> </div>
+                    <p class='sankey-text' id="sankey-instruction" style="text-align:left"> <span style="color: #cc0000;">Choose relationships</span> to visualize from the select box. </br>
+                        <span style="color: #c09acb;">Hover over a specific link</span> to see the restaurant distribution in detail.</br> </p>
                 </div>
             </div>
         </div>
@@ -190,11 +190,11 @@
                 </div>
                 <div class="col-md-4">
                     <div style="margin-top:300px">
-                        <h5 class='sunburst-text' style="font-size:23px; text-align:center;">Wonder which region, state, awards are dominant in Michelin guide?</h5>
+                        <h3 class='sunburst-text' style="text-align:left">Wonder which region, state, awards are dominant in Michelin guide?</h3>
                         <hr/>
-                        <p class='sunburst-text' >Start exploring by <span style="color: #cc0000;">clicking on any segment</span>!</p>
-                        <p class='sunburst-text' >Each layer representing a different level of distinction from the Michelin Guide. <p>
-                        <p class='sunburst-text' ><span style="color: #cc0000;">Hover</span> for more information on the composition.</p>
+                        <p class='sunburst-text' style="text-align:left">Start exploring by <span style="color: #cc0000;">clicking on any segment</span>!</p>
+                        <p class='sunburst-text' style="text-align:left">Each layer representing a different level of distinction from the Michelin Guide. <p>
+                        <p class='sunburst-text' style="text-align:left"><span style="color: #cc0000;">Hover</span> for more information on the composition.</p>
 
                     </div>
                 </div>
