--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <div class="row center shadow p-3 mb-5 bg-white rounded section">
         <div class="center" id="introduction">
+            <img src="img/image_with_white_edges.png" width="1000px"></img>
             <h5>Embark on a culinary adventure to discover the allure of Michelin Star restaurants in the United States. <br/>
                 What distinguishes these dining havens, setting them apart in the world of gastronomy? <br/>
                 Join us on an inspired journey to explore the stars of the American culinary scene. <br/>
@@ -46,7 +47,7 @@
     <div class="row center shadow p-3 mb-5 bg-white rounded section">
         <div class="center" id="michelin-stars">
             <p><h3>First, let's learn about what the different types of Michelin awards are!</h3> <br/>
-            <p><br/>Let's hear from the <a href="https://guide.michelin.com/us/en/article/features/what-is-a-michelin-star">Michelin Guide itself</a>!<br/></p>
+            <p><br/>Let's hear from the <a href="https://guide.michelin.com/us/en/article/features/what-is-a-michelin-star" target="_blank">Michelin Guide itself</a>!<br/></p>
             <div class="container michelin-stars">
                 <div class="row align-items-center mb-3">
                     <div class="col-3">
@@ -159,7 +160,7 @@
                 <hr/>
                 <p>We've analyzed the country-wide distribution of top 8 Michelin restaurant cuisines. <span style="color: #cc0000;">Choose a category</span> to reveal which state has the most variety of restaurants given your cuisine of interest.</p>
                 <p>Each color denotes a specific category under your chosen cuisine type. You can <span style="color: #cc0000;">hover over the blocks to view restaurants info</span>.</p>
-                <p>You can <span style="color: #cc0000;">click on a legend</span> from your and view that sub-category's distribution only! Click anywhere on the page to reset your view.</p>
+                <p><b><span style="color: #cc0000;">Click on a legend</span></b> to highlight! Click anywhere on the page to reset.</p>
                 <p>Have fun exploring!</p>
             </div>
             <div class="col-md-9">
@@ -195,7 +196,7 @@
                         <p class='sunburst-text' style="text-align:left">Start exploring by <span style="color: #cc0000;">clicking on any segment</span>!</p>
                         <p class='sunburst-text' style="text-align:left">Each layer representing a different level of distinction from the Michelin Guide. <p>
                         <p class='sunburst-text' style="text-align:left"><span style="color: #cc0000;">Hover</span> for more information on the composition.</p>
-
+                        <p class='sunburst-text' style="text-align:left"><span style="color: #cc0000;">Click center</span> to zoom out.</p>
                     </div>
                 </div>
             </div>
