--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="row center shadow p-3 mb-5 bg-white rounded section">
         <div class="row d-flex justify-content-center" id="wordCloud">
-            <div><h3 class="center" id="wordCloud-text"><b>Variety of Cuisines of Michelin Restaurants</b></h3></div>
+            <div><h5 class="center"><b>Variety of Cuisines of Michelin Restaurants</b></h5></div>
         </div>
     </div>
 
@@ -125,6 +125,29 @@
             </div>
 
             <div id="leafMapDiv"></div>
+        </div>
+    </div>
+
+
+    <div class="row center shadow p-3 mb-5 bg-white rounded section">
+        <div class="container" >
+            <div class="row" id="sunburst-container">
+                <div class="col-md-8">
+                    <div id="sunburstDiv">
+                        <!-- Sunburst chart will be inserted here -->
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div style="margin-top:300px">
+                        <h3 class='sunburst-text' style="text-align:left">Wonder which region, state, awards are dominant in Michelin guide?</h3>
+                        <hr/>
+                        <p class='sunburst-text' style="text-align:left">Start exploring by <span style="color: #cc0000;">clicking on any segment</span>!</p>
+                        <p class='sunburst-text' style="text-align:left">Each layer representing a different level of distinction from the Michelin Guide. <p>
+                        <p class='sunburst-text' style="text-align:left"><span style="color: #cc0000;">Hover</span> for more information on the composition.</p>
+                        <p class='sunburst-text' style="text-align:left"><span style="color: #cc0000;">Click center</span> to zoom out.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -180,27 +203,6 @@
         </div>
     </div>
 
-    <div class="row center shadow p-3 mb-5 bg-white rounded section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <div id="sunburstDiv">
-                        <!-- Sunburst chart will be inserted here -->
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div style="margin-top:300px">
-                        <h3 class='sunburst-text' style="text-align:left">Wonder which region, state, awards are dominant in Michelin guide?</h3>
-                        <hr/>
-                        <p class='sunburst-text' style="text-align:left">Start exploring by <span style="color: #cc0000;">clicking on any segment</span>!</p>
-                        <p class='sunburst-text' style="text-align:left">Each layer representing a different level of distinction from the Michelin Guide. <p>
-                        <p class='sunburst-text' style="text-align:left"><span style="color: #cc0000;">Hover</span> for more information on the composition.</p>
-                        <p class='sunburst-text' style="text-align:left"><span style="color: #cc0000;">Click center</span> to zoom out.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <div class="row center shadow p-3 mb-5 bg-white rounded section">
         <div class="row center" id="intro-bochelin">
